# physics-sim-api

./: .env.example  .gitignore  DEVELOPMENT.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_migration.py
app/: main.py
app/api/: deps.py  health.py  jobs.py  schemas.py
app/core/: config.py  database.py  logging.py
app/models/: __init__.py  job.py
app/services/: __init__.py  job_service.py
app/tasks/: celery_app.py  simulation.py
artifacts/278b41ae-8965-477d-ba28-63ef704d1bde/output/: meta.json  result.csv  temperature_field.npy  time_array.npy
examples/: client.py  curl_examples.sh  postman_collection.json
infra/aws/: README_AWS.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
scripts/: dev_setup.py  entrypoint.sh  seed_data.py
sim/: Dockerfile  run_sim.py
tests/: conftest.py
tests/integration/: test_job_workflow.py
tests/unit/: test_api_endpoints.py  test_job_service.py  test_simulation.py
